--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^11.1.3",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
